[package]
name = "learn-async-tokio"
version = "0.1.0"
authors = ["Daogang Tang <daogangtang@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {git="https://github.com/tokio-rs/tokio"}
#futures = {git="https://github.com/rust-lang-nursery/futures-rs"}
futures-preview = {version="0.3.0-alpha.18", features=["async-await", "nightly"] }

[[bin]]
name = "interval"
path = "src/interval.rs"

[[bin]]
name = "two_intervals"
path = "src/two_intervals.rs"

[[bin]]
name = "two_intervals_2"
path = "src/two_intervals_2.rs"
